Changelog
=========

0.5-dev - (unreleased)
----------------------

0.4 - (2010-10-25)
----------------------
 - Fix broken js/css links in slideshow popup [thuliper, #3661]

0.3 (2010-03-16)
----------------
 - Include copyright in gallery view images if there is one [thuliper, #3119]
 - Don't crash if 'galleries', 'chapters', 'old-reports', 'old-articles' not found [thuliper]
 - List old articles (related to http://eea.europa.eu/publications/signals-2009) [thuliper]
 - Use translated objects for 'chapters' and 'galleries' folders so that these does not have to be named the same [thuliper]

0.2 (2010-03-08)
----------------
 - Use folders for articles/eyewitness sections so that it's easier to translate [thuliper, #3041]
 - New Eyewitness story icon for CMS [thuliper]
 - Eyewitness stories opens in fancybox [thuliper, #3008]
 - Link to previous signal reports [thuliper, #3010]

0.1 (2010-02-16)
----------------
- Initial release